[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Loot/Money_bag/Money_bag.gd" type="Script" id=1]
[ext_resource path="res://src/Loot/Money_bag/moneybag.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Objects/Bags/bag.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 72 )

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Money_bag" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Interaction_hitbox" type="Area2D" parent="." groups=["interactable"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_hitbox"]
shape = SubResource( 1 )

[node name="Interaction_timer" type="Timer" parent="."]
one_shot = true

[node name="Interaction_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = -232.0
margin_right = 48.0
margin_bottom = -84.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interaction_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 217.0
margin_bottom = 141.0

[node name="Title" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_right = 210.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "Money"
align = 1

[node name="Action1" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 72.0
margin_right = 210.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 3 )
text = "Hold [F] to Bag"
align = 1
autowrap = true

[node name="Interaction_progress" type="ProgressBar" parent="Interaction_panel/VBoxContainer"]
margin_top = 111.0
margin_right = 210.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 4 )
step = 1.0
rounded = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -3.8147e-06, -1.90735e-06 )
scale = Vector2( 8, 7.2 )

[node name="bag" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
bus = "SFX"

[connection signal="timeout" from="Interaction_timer" to="." method="_on_Interaction_timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
